--- a/build.yaml
+++ b/build.yaml
@@ -26,5 +26,6 @@ include:
     artifact-name: slimkeeb_left_gallium
   - board: seeeduino_xiao_ble
     shield: slimkeeb_right
-    cmake-args: -DKEYMAP_FILE=../../config/gallium36.keymap
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DKEYMAP_FILE=../../config/gallium36.keymap -DCONFIG_ZMK_STUDIO=y
     artifact-name: slimkeeb_right_gallium
