--- a/config/west.yml
+++ b/config/west.yml
@@ -1,12 +1,10 @@
 manifest:
   remotes:
-    - name: urob
-      url-base: https://github.com/urob
-    # Additional modules containing boards/shields/custom code can be listed here as well
-    # See https://docs.zephyrproject.org/3.2.0/develop/west/manifest.html#projects
+    - name: zmkfirmware
+      url-base: https://github.com/zmkfirmware
   projects:
     - name: zmk
-      remote: urob
+      remote: zmkfirmware
       revision: main
       import: app/west.yml
   self:
