--- a/boards/shields/slimkeeb/slimkeeb.dtsi
+++ b/boards/shields/slimkeeb/slimkeeb.dtsi
@@ -1,67 +1,10 @@
-/* slimkeeb.dtsi */
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <layouts.dtsi>
 
 / {
-    /* 1. 키 정의 (Keys) - 가장 먼저 정의해야 함 */
-    keys {
-        /* 부모 노드에만 compatible을 명시합니다 */
-        compatible = "zmk,physical-keys";
-        #key-cells = <0>;
-
-        /* 자식 노드(k0~k35)에는 compatible 라인을 제거해야 합니다. */
-        /* Row 1 (Top) */
-        k0: k_0 { #key-cells = <0>; y = <0>; x = <0>; width = <1800>; height = <1800>; };
-        k1: k_1 { #key-cells = <0>; y = <0>; x = <1900>; width = <1800>; height = <1800>; };
-        k2: k_2 { #key-cells = <0>; y = <0>; x = <3800>; width = <1800>; height = <1800>; };
-        k3: k_3 { #key-cells = <0>; y = <0>; x = <5700>; width = <1800>; height = <1800>; };
-        k4: k_4 { #key-cells = <0>; y = <0>; x = <7600>; width = <1800>; height = <1800>; };
-
-        k5: k_5 { #key-cells = <0>; y = <0>; x = <22800>; width = <1800>; height = <1800>; };
-        k6: k_6 { #key-cells = <0>; y = <0>; x = <24700>; width = <1800>; height = <1800>; };
-        k7: k_7 { #key-cells = <0>; y = <0>; x = <26600>; width = <1800>; height = <1800>; };
-        k8: k_8 { #key-cells = <0>; y = <0>; x = <28500>; width = <1800>; height = <1800>; };
-        k9: k_9 { #key-cells = <0>; y = <0>; x = <30400>; width = <1800>; height = <1800>; };
-
-        /* Row 2 (Middle) */
-        k10: k_10 { #key-cells = <0>; y = <1900>; x = <0>; width = <1800>; height = <1800>; };
-        k11: k_11 { #key-cells = <0>; y = <1900>; x = <1900>; width = <1800>; height = <1800>; };
-        k12: k_12 { #key-cells = <0>; y = <1900>; x = <3800>; width = <1800>; height = <1800>; };
-        k13: k_13 { #key-cells = <0>; y = <1900>; x = <5700>; width = <1800>; height = <1800>; };
-        k14: k_14 { #key-cells = <0>; y = <1900>; x = <7600>; width = <1800>; height = <1800>; };
-
-        k15: k_15 { #key-cells = <0>; y = <1900>; x = <22800>; width = <1800>; height = <1800>; };
-        k16: k_16 { #key-cells = <0>; y = <1900>; x = <24700>; width = <1800>; height = <1800>; };
-        k17: k_17 { #key-cells = <0>; y = <1900>; x = <26600>; width = <1800>; height = <1800>; };
-        k18: k_18 { #key-cells = <0>; y = <1900>; x = <28500>; width = <1800>; height = <1800>; };
-        k19: k_19 { #key-cells = <0>; y = <1900>; x = <30400>; width = <1800>; height = <1800>; };
-
-        /* Row 3 (Bottom) */
-        k20: k_20 { #key-cells = <0>; y = <3800>; x = <0>; width = <1800>; height = <1800>; };
-        k21: k_21 { #key-cells = <0>; y = <3800>; x = <1900>; width = <1800>; height = <1800>; };
-        k22: k_22 { #key-cells = <0>; y = <3800>; x = <3800>; width = <1800>; height = <1800>; };
-        k23: k_23 { #key-cells = <0>; y = <3800>; x = <5700>; width = <1800>; height = <1800>; };
-        k24: k_24 { #key-cells = <0>; y = <3800>; x = <7600>; width = <1800>; height = <1800>; };
-
-        k25: k_25 { #key-cells = <0>; y = <3800>; x = <22800>; width = <1800>; height = <1800>; };
-        k26: k_26 { #key-cells = <0>; y = <3800>; x = <24700>; width = <1800>; height = <1800>; };
-        k27: k_27 { #key-cells = <0>; y = <3800>; x = <26600>; width = <1800>; height = <1800>; };
-        k28: k_28 { #key-cells = <0>; y = <3800>; x = <28500>; width = <1800>; height = <1800>; };
-        k29: k_29 { #key-cells = <0>; y = <3800>; x = <30400>; width = <1800>; height = <1800>; };
-
-        /* Thumbs */
-        k30: k_30 { #key-cells = <0>; y = <5700>; x = <5700>; width = <1800>; height = <1800>; };
-        k31: k_31 { #key-cells = <0>; y = <5700>; x = <7600>; width = <1800>; height = <1800>; };
-        k32: k_32 { #key-cells = <0>; y = <5700>; x = <9500>; width = <1800>; height = <1800>; };
-        
-        k33: k_33 { #key-cells = <0>; y = <5700>; x = <20900>; width = <1800>; height = <1800>; };
-        k34: k_34 { #key-cells = <0>; y = <5700>; x = <22800>; width = <1800>; height = <1800>; };
-        k35: k_35 { #key-cells = <0>; y = <5700>; x = <24700>; width = <1800>; height = <1800>; };
-    };
-
-    /* 2. Chosen, Transform, Layout 설정 */
     chosen {
-        zmk,matrix-transform = &default_transform;
         zmk,physical-layout = &physical_layout0;
+        // zmk,matrix-transform은 physical-layout 내부에서 참조하므로 여기서는 제거합니다.
     };
 
     default_transform: keymap_transform_0 {
@@ -72,22 +15,70 @@
             RC(0,0) RC(0,1) RC(0,2) RC(1,2) RC(0,3)   RC(0,7) RC(1,6) RC(0,6) RC(0,5) RC(0,4)
             RC(1,0) RC(3,0) RC(3,1) RC(3,2) RC(1,3)   RC(1,7) RC(3,6) RC(3,5) RC(3,4) RC(1,4)
             RC(2,0) RC(1,1) RC(2,1) RC(2,2) RC(2,3)   RC(2,7) RC(2,6) RC(2,5) RC(1,5) RC(2,4)
-                          
-            RC(4,2) RC(4,1) RC(4,0)   RC(4,4) RC(4,5) RC(4,6)
+                            RC(4,2) RC(4,1) RC(4,0)   RC(4,4) RC(4,5) RC(4,6)
         >;
     };
 
-    physical_layout0: physical_layout_0 {
-        compatible = "zmk,physical-layout";
-        display-name = "Default Layout";
-        transform = <&default_transform>;
-        keys
-            = <&k0  &k1  &k2  &k3  &k4    &k5  &k6  &k7  &k8  &k9>
-            , <&k10 &k11 &k12 &k13 &k14   &k15 &k16 &k17 &k18 &k19>
-            , <&k20 &k21 &k22 &k23 &k24   &k25 &k26 &k27 &k28 &k29>
-            ,       
-              <&k30 &k31 &k32   &k33 &k34 &k35>
-            ;
+    layouts {
+        compatible = "zmk,physical-layout-list";
+
+        physical_layout0: physical_layout_0 {
+            display-name = "Default Layout";
+            transform = <&default_transform>;
+            // 1900 units = 19mm (표준 키캡 간격)
+            // 좌표 순서: Keymap 파일의 입력 순서와 일치해야 합니다 (0~35번 키)
+            keys =  // --- Top Row ---
+                    // Left Hand (0-4)
+                    <&key_physical_attrs 0 0 1900 1900>,
+                    <&key_physical_attrs 1900 0 1900 1900>,
+                    <&key_physical_attrs 3800 0 1900 1900>,
+                    <&key_physical_attrs 5700 0 1900 1900>,
+                    <&key_physical_attrs 7600 0 1900 1900>,
+                    // Right Hand (5-9) - X좌표에 갭(예: 3000)을 둠
+                    <&key_physical_attrs 12500 0 1900 1900>,
+                    <&key_physical_attrs 14400 0 1900 1900>,
+                    <&key_physical_attrs 16300 0 1900 1900>,
+                    <&key_physical_attrs 18200 0 1900 1900>,
+                    <&key_physical_attrs 20100 0 1900 1900>,
+
+                    // --- Middle Row ---
+                    // Left Hand (10-14)
+                    <&key_physical_attrs 0 1900 1900 1900>,
+                    <&key_physical_attrs 1900 1900 1900 1900>,
+                    <&key_physical_attrs 3800 1900 1900 1900>,
+                    <&key_physical_attrs 5700 1900 1900 1900>,
+                    <&key_physical_attrs 7600 1900 1900 1900>,
+                    // Right Hand (15-19)
+                    <&key_physical_attrs 12500 1900 1900 1900>,
+                    <&key_physical_attrs 14400 1900 1900 1900>,
+                    <&key_physical_attrs 16300 1900 1900 1900>,
+                    <&key_physical_attrs 18200 1900 1900 1900>,
+                    <&key_physical_attrs 20100 1900 1900 1900>,
+
+                    // --- Bottom Row ---
+                    // Left Hand (20-24)
+                    <&key_physical_attrs 0 3800 1900 1900>,
+                    <&key_physical_attrs 1900 3800 1900 1900>,
+                    <&key_physical_attrs 3800 3800 1900 1900>,
+                    <&key_physical_attrs 5700 3800 1900 1900>,
+                    <&key_physical_attrs 7600 3800 1900 1900>,
+                    // Right Hand (25-29)
+                    <&key_physical_attrs 12500 3800 1900 1900>,
+                    <&key_physical_attrs 14400 3800 1900 1900>,
+                    <&key_physical_attrs 16300 3800 1900 1900>,
+                    <&key_physical_attrs 18200 3800 1900 1900>,
+                    <&key_physical_attrs 20100 3800 1900 1900>,
+
+                    // --- Thumb Cluster ---
+                    // Left Thumbs (30-32) - 약간 안쪽으로 배치
+                    <&key_physical_attrs 3800 5700 1900 1900>,
+                    <&key_physical_attrs 5700 5700 1900 1900>,
+                    <&key_physical_attrs 7600 5700 1900 1900>,
+                    // Right Thumbs (33-35)
+                    <&key_physical_attrs 12500 5700 1900 1900>,
+                    <&key_physical_attrs 14400 5700 1900 1900>,
+                    <&key_physical_attrs 16300 5700 1900 1900>;
+        };
     };
 };
 
