--- a/boards/shields/slimkeeb/slimkeeb.dtsi
+++ b/boards/shields/slimkeeb/slimkeeb.dtsi
@@ -1,4 +1,8 @@
-
+/*
+ * Copyright (c) 2020 The ZMK Contributors
+ *
+ * SPDX-License-Identifier: MIT
+ */
 
 #include <dt-bindings/zmk/matrix_transform.h>
 
@@ -7,9 +11,12 @@
         zmk,physical-layout = &physical_layout0;
     };
 
+    /* * 수정됨: #key-cells = <7>
+     * ZMK 바인딩 규칙(x, y, w, h, rx, ry, rz)에 맞춰 7개로 설정했습니다.
+     */
     key_physical_attrs: key_physical_attrs {
         compatible = "zmk,key-physical-attrs";
-        #key-cells = <4>; /* x, y, w, h */
+        #key-cells = <7>;
     };
 
     default_transform: keymap_transform_0 {
@@ -28,57 +35,58 @@
         compatible = "zmk,physical-layout";
         display-name = "Default Layout";
         transform = <&default_transform>;
+        /* 모든 키에 0 0 0 (회전값)을 추가하여 총 7개 인자를 맞췄습니다 */
         keys =  // --- Top Row ---
                 // Left Hand (0-4)
-                <&key_physical_attrs 0 0 1900 1900>,
-                <&key_physical_attrs 1900 0 1900 1900>,
-                <&key_physical_attrs 3800 0 1900 1900>,
-                <&key_physical_attrs 5700 0 1900 1900>,
-                <&key_physical_attrs 7600 0 1900 1900>,
+                <&key_physical_attrs 0 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 1900 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 3800 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 0 1900 1900 0 0 0>,
                 // Right Hand (5-9)
-                <&key_physical_attrs 12500 0 1900 1900>,
-                <&key_physical_attrs 14400 0 1900 1900>,
-                <&key_physical_attrs 16300 0 1900 1900>,
-                <&key_physical_attrs 18200 0 1900 1900>,
-                <&key_physical_attrs 20100 0 1900 1900>,
+                <&key_physical_attrs 12500 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 18200 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 20100 0 1900 1900 0 0 0>,
 
                 // --- Middle Row ---
                 // Left Hand (10-14)
-                <&key_physical_attrs 0 1900 1900 1900>,
-                <&key_physical_attrs 1900 1900 1900 1900>,
-                <&key_physical_attrs 3800 1900 1900 1900>,
-                <&key_physical_attrs 5700 1900 1900 1900>,
-                <&key_physical_attrs 7600 1900 1900 1900>,
+                <&key_physical_attrs 0 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 1900 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 3800 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 1900 1900 1900 0 0 0>,
                 // Right Hand (15-19)
-                <&key_physical_attrs 12500 1900 1900 1900>,
-                <&key_physical_attrs 14400 1900 1900 1900>,
-                <&key_physical_attrs 16300 1900 1900 1900>,
-                <&key_physical_attrs 18200 1900 1900 1900>,
-                <&key_physical_attrs 20100 1900 1900 1900>,
+                <&key_physical_attrs 12500 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 18200 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 20100 1900 1900 1900 0 0 0>,
 
                 // --- Bottom Row ---
                 // Left Hand (20-24)
-                <&key_physical_attrs 0 3800 1900 1900>,
-                <&key_physical_attrs 1900 3800 1900 1900>,
-                <&key_physical_attrs 3800 3800 1900 1900>,
-                <&key_physical_attrs 5700 3800 1900 1900>,
-                <&key_physical_attrs 7600 3800 1900 1900>,
+                <&key_physical_attrs 0 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 1900 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 3800 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 3800 1900 1900 0 0 0>,
                 // Right Hand (25-29)
-                <&key_physical_attrs 12500 3800 1900 1900>,
-                <&key_physical_attrs 14400 3800 1900 1900>,
-                <&key_physical_attrs 16300 3800 1900 1900>,
-                <&key_physical_attrs 18200 3800 1900 1900>,
-                <&key_physical_attrs 20100 3800 1900 1900>,
+                <&key_physical_attrs 12500 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 18200 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 20100 3800 1900 1900 0 0 0>,
 
                 // --- Thumb Cluster ---
                 // Left Thumbs (30-32)
-                <&key_physical_attrs 3800 5700 1900 1900>,
-                <&key_physical_attrs 5700 5700 1900 1900>,
-                <&key_physical_attrs 7600 5700 1900 1900>,
+                <&key_physical_attrs 3800 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 5700 1900 1900 0 0 0>,
                 // Right Thumbs (33-35)
-                <&key_physical_attrs 12500 5700 1900 1900>,
-                <&key_physical_attrs 14400 5700 1900 1900>,
-                <&key_physical_attrs 16300 5700 1900 1900>;
+                <&key_physical_attrs 12500 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 5700 1900 1900 0 0 0>;
     };
 };
 
