--- a/boards/shields/slimkeeb/slimkeeb.dtsi
+++ b/boards/shields/slimkeeb/slimkeeb.dtsi
@@ -1,8 +1,21 @@
+/*
+ * Copyright (c) 2020 The ZMK Contributors
+ *
+ * SPDX-License-Identifier: MIT
+ */
+
 #include <dt-bindings/zmk/matrix_transform.h>
 
 / {
     chosen {
-        zmk,matrix-transform = &default_transform;
+        zmk,physical-layout = &physical_layout0;
+        // zmk,matrix-transform은 여기서 사용하지 않습니다 (physical-layout 안에 포함됨)
+    };
+
+    /* ZMK Studio를 위한 물리적 속성 정의 (7개 인자) */
+    key_physical_attrs: key_physical_attrs {
+        compatible = "zmk,key-physical-attrs";
+        #key-cells = <7>; /* x, y, w, h, rx, ry, rz */
     };
 
     default_transform: keymap_transform_0 {
@@ -15,6 +28,66 @@
             RC(2,0) RC(1,1) RC(2,1) RC(2,2) RC(2,3)   RC(2,7) RC(2,6) RC(2,5) RC(1,5) RC(2,4)
                             RC(4,2) RC(4,1) RC(4,0)   RC(4,4) RC(4,5) RC(4,6)
         >;
+    };
+
+    physical_layout0: physical_layout_0 {
+        compatible = "zmk,physical-layout";
+        display-name = "Default Layout";
+        transform = <&default_transform>;
+        /* * 키 좌표 정의 (단위: 1900 = 19mm = 1u)
+         * 형식: <&key_physical_attrs  X  Y  W  H  0  0  0> 
+         */
+        keys =  // --- Top Row ---
+                // Left Hand (0-4)
+                <&key_physical_attrs 0 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 1900 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 3800 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 0 1900 1900 0 0 0>,
+                // Right Hand (5-9)
+                <&key_physical_attrs 12500 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 18200 0 1900 1900 0 0 0>,
+                <&key_physical_attrs 20100 0 1900 1900 0 0 0>,
+
+                // --- Middle Row ---
+                // Left Hand (10-14)
+                <&key_physical_attrs 0 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 1900 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 3800 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 1900 1900 1900 0 0 0>,
+                // Right Hand (15-19)
+                <&key_physical_attrs 12500 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 18200 1900 1900 1900 0 0 0>,
+                <&key_physical_attrs 20100 1900 1900 1900 0 0 0>,
+
+                // --- Bottom Row ---
+                // Left Hand (20-24)
+                <&key_physical_attrs 0 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 1900 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 3800 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 3800 1900 1900 0 0 0>,
+                // Right Hand (25-29)
+                <&key_physical_attrs 12500 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 18200 3800 1900 1900 0 0 0>,
+                <&key_physical_attrs 20100 3800 1900 1900 0 0 0>,
+
+                // --- Thumb Cluster ---
+                // Left Thumbs (30-32)
+                <&key_physical_attrs 3800 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 5700 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 7600 5700 1900 1900 0 0 0>,
+                // Right Thumbs (33-35)
+                <&key_physical_attrs 12500 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 14400 5700 1900 1900 0 0 0>,
+                <&key_physical_attrs 16300 5700 1900 1900 0 0 0>;
     };
 };
 
